--- a/index.html
+++ b/index.html
@@ -5,11 +5,41 @@
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
   <link rel="stylesheet" href="css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Satisfy" rel="stylesheet">
 </head>
 <body>
+
 <div id="canvas">
-  <div id="counter"></div>
-  <img src="http://www.pvhc.net/img8/niexjjzstcseuzdzkvoq.png" alt="" id="icon">
+
+<div id="title">
+  <p id="line00">She Walks In Beauty</p>
+</div>
+
+<div id="poem">
+  <p id="line01">She walks in beauty, like the night</p>
+  <p id="line02">Of cloudless climes and starry skies;</p>
+  <p id="line03">And all that’s best of dark and bright</p>
+  <p id="line04">Meet in her aspect and her eyes;</p>
+  <p id="line05">Thus mellowed to that tender light</p>
+  <p id="line06">Which heaven to gaudy day denies.</p>
+</br>
+  <p id="line07">One shade the more, one ray the less,</p>
+  <p id="line08">Had half impaired the nameless grace</p>
+  <p id="line09">Which waves in every raven tress,</p>
+  <p id="line10">Or softly lightens o’er her face;</p>
+  <p id="line11">Where thoughts serenely sweet express,</p>
+  <p id="line12">How pure, how dear their dwelling-place.</p>
+</br>
+  <p id="line13">And on that cheek, and o’er that brow,</p>
+  <p id="line14">So soft, so calm, yet eloquent,</p>
+  <p id="line15">The smiles that win, the tints that glow,</p>
+  <p id="line16">But tell of days in goodness spent,</p>
+  <p id="line17">A mind at peace with all below,</p>
+  <p id="line18">A heart whose love is innocent!</p>
+</div>
+
+  <!-- <div id="counter"></div> -->
+  <!-- <img src="http://www.pvhc.net/img8/niexjjzstcseuzdzkvoq.png" alt="" id="icon"> -->
 </div>
 
 <script src="js/app.js"></script>
