--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
 <div id="canvas">
 
+<div id="inst">
+  <p>Press and Hold the Down Arrow &#8595;</p>
+</div>
+
 <div id="title">
-  <p id="line00">She Walks In Beauty</p>
+  <p>She Walks In Beauty</p>
 </div>
 
 <div id="poem">
