--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>She Walks In Beauty</title>
   <link rel="stylesheet" href="css/app.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Satisfy" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
 <div id="canvas">
 
 <div id="inst">
-  <p>Press and Hold the Down Arrow &#8595;</p>
+  <p>Lord Byron</p>
 </div>
 
 <div id="title">
@@ -20,7 +20,7 @@
 </div>
 
 <div id="poem">
-  <p id="line01">She walks in beauty, like the night</p>
+  <p id="line01" class="glo">She walks in beauty, like the night</p>
   <p id="line02">Of cloudless climes and starry skies;</p>
   <p id="line03">And all that’s best of dark and bright</p>
   <p id="line04">Meet in her aspect and her eyes;</p>
@@ -41,6 +41,98 @@
   <p id="line17">A mind at peace with all below,</p>
   <p id="line18">A heart whose love is innocent!</p>
 </div>
+
+<img src="images/moon.png" id="moon" alt="">
+
+<img src="images/cloud1.png" id="cloud1" alt="">
+<img src="images/cloud2.png" id="cloud2" alt="">
+<img src="images/cloud3.png" id="cloud3" alt="">
+
+
+<div id="stars">
+<img src="images/star3.png" id="star01" alt="">
+<img src="images/star2.png" id="star02" alt="">
+<img src="images/star1.png" id="star03" alt="">
+<img src="images/star2.png" id="star04" alt="">
+<img src="images/star1.png" id="star05" alt="">
+<img src="images/star3.png" id="star06" alt="">
+<img src="images/star2.png" id="star07" alt="">
+<img src="images/star1.png" id="star08" alt="">
+<img src="images/star3.png" id="star09" alt="">
+<img src="images/star2.png" id="star10" alt="">
+<img src="images/star1.png" id="star11" alt="">
+<img src="images/star3.png" id="star12" alt="">
+<img src="images/star2.png" id="star13" alt="">
+<img src="images/star1.png" id="star14" alt="">
+<img src="images/star3.png" id="star15" alt="">
+<img src="images/star2.png" id="star16" alt="">
+<img src="images/star1.png" id="star17" alt="">
+<img src="images/star3.png" id="star18" alt="">
+<img src="images/star2.png" id="star19" alt="">
+<img src="images/star1.png" id="star20" alt="">
+<img src="images/star3.png" id="star21" alt="">
+<img src="images/star2.png" id="star22" alt="">
+<img src="images/star1.png" id="star23" alt="">
+<img src="images/star3.png" id="star24" alt="">
+<img src="images/star2.png" id="star25" alt="">
+<img src="images/star1.png" id="star26" alt="">
+<img src="images/star3.png" id="star27" alt="">
+<img src="images/star2.png" id="star28" alt="">
+<img src="images/star1.png" id="star29" alt="">
+<img src="images/star3.png" id="star30" alt="">
+<img src="images/star2.png" id="star31" alt="">
+<img src="images/star1.png" id="star32" alt="">
+<img src="images/star3.png" id="star33" alt="">
+<img src="images/star2.png" id="star34" alt="">
+<img src="images/star1.png" id="star35" alt="">
+<img src="images/star3.png" id="star36" alt="">
+<img src="images/star2.png" id="star37" alt="">
+<img src="images/star1.png" id="star38" alt="">
+<img src="images/star3.png" id="star39" alt="">
+<img src="images/star2.png" id="star40" alt="">
+<img src="images/star1.png" id="star41" alt="">
+<img src="images/star3.png" id="star42" alt="">
+<img src="images/star2.png" id="star43" alt="">
+<img src="images/star1.png" id="star44" alt="">
+<img src="images/star3.png" id="star45" alt="">
+<img src="images/star2.png" id="star46" alt="">
+<img src="images/star1.png" id="star47" alt="">
+<img src="images/star3.png" id="star48" alt="">
+<img src="images/star2.png" id="star49" alt="">
+<img src="images/star1.png" id="star50" alt="">
+<img src="images/star3.png" id="star51" alt="">
+<img src="images/star2.png" id="star52" alt="">
+<img src="images/star1.png" id="star53" alt="">
+<img src="images/star3.png" id="star54" alt="">
+<img src="images/star2.png" id="star55" alt="">
+<img src="images/star1.png" id="star56" alt="">
+<img src="images/star3.png" id="star57" alt="">
+<img src="images/star2.png" id="star58" alt="">
+<img src="images/star1.png" id="star59" alt="">
+<img src="images/star3.png" id="star60" alt="">
+<img src="images/star2.png" id="star61" alt="">
+<img src="images/star1.png" id="star62" alt="">
+<img src="images/star3.png" id="star63" alt="">
+<img src="images/star2.png" id="star64" alt="">
+<img src="images/star1.png" id="star65" alt="">
+<img src="images/star3.png" id="star66" alt="">
+<img src="images/star2.png" id="star67" alt="">
+<img src="images/star1.png" id="star68" alt="">
+<img src="images/star3.png" id="star69" alt="">
+<img src="images/star2.png" id="star70" alt="">
+<img src="images/star1.png" id="star71" alt="">
+<img src="images/star3.png" id="star72" alt="">
+<img src="images/star2.png" id="star73" alt="">
+<img src="images/star1.png" id="star74" alt="">
+<img src="images/star3.png" id="star75" alt="">
+<img src="images/star2.png" id="star76" alt="">
+<img src="images/star1.png" id="star77" alt="">
+<img src="images/star3.png" id="star78" alt="">
+<img src="images/star2.png" id="star79" alt="">
+<img src="images/star1.png" id="star80" alt="">
+<img src="images/star3.png" id="star81" alt="">
+</div>
+
 
   <!-- <div id="counter"></div> -->
   <!-- <img src="http://www.pvhc.net/img8/niexjjzstcseuzdzkvoq.png" alt="" id="icon"> -->
