--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <img src="images/moon.png" id="moon" alt="">
 
+<img src="images/lady.png" id="lady" alt="">
+
 <img src="images/cloud1.png" id="cloud1" alt="">
 <img src="images/cloud2.png" id="cloud2" alt="">
 <img src="images/cloud3.png" id="cloud3" alt="">
